Name:           fenfire
Version:        0.2
License:        GPL
License-file:   LICENSE
Author:         Benja Fallenstein and Tuukka Hastrup
Maintainer:     fenfire-dev@nongnu.org
Synopsis:       Graph-based notetaking system
Description:    Fenfire is a graph-based notetaking system. (We're
                planning to add a kitchen sink soon.) It is developed 
                on the channel #fenfire on the Freenode IRC network.
Category:       User Interfaces
Stability:      alpha
Homepage:       http://fenfire.org/
Build-Depends:  base >= 4 && < 5, HaXml, gtk > 0.9.10, mtl, unix, cairo, harp,
                template-haskell, glib, network, HList,
                containers >= 0.1.0.1,
                bytestring >= 0.9.0.1,
                old-time >= 1.0.0.0,
                directory >= 1.0.0.0,
                random >= 1.0.0.0,
                process >= 1.0.0.0,
                syb
Data-Files:     data-files/logo.svg data-files/icon16.png
Extra-Source-Files: README, Makefile, DaisyData.txt, test.nt
Build-Type:     Custom

Executable:     fenfire
Main-Is:        Fenfire/Main.hs
Other-Modules:  Fenfire, Fenfire.Vobs, Fenfire.RDF, Fenfire.Cache,
                Fenfire.Cairo, Fenfire.Utils, Raptor, FunctorSugar,
                Fenfire.GtkFixes, Fenfire.VanishingView, Fenfire.Main,
                Fenfire.URN5
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.Main.main
Extra-Libraries: raptor

Executable:     functortest
Main-Is:        Fenfire/FunctorTest.hs
Other-Modules:  Fenfire.FunctorTest, FunctorSugar
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.FunctorTest.main

Executable:     vobtest
Main-Is:        Fenfire/VobTest.hs
Other-Modules:  Fenfire.VobTest, Fenfire.Vobs, Fenfire.Cairo, Fenfire.Utils, FunctorSugar
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.VobTest.main

Executable:     frptest
Main-Is:        Fenfire/FRP.hs
Other-Modules:  Fenfire.FRP, Fenfire.Utils, FunctorSugar
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.FRP.main

Executable:     darcs2rdf
Main-Is:        Fenfire/Darcs2RDF.hs
Other-Modules:  Fenfire.Darcs2RDF, FunctorSugar
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.Darcs2RDF.main

Executable:     irc2rdf
Main-Is:        Fenfire/Irc2RDF.hs
Other-Modules:  Fenfire.Irc2RDF Fenfire.RDF Raptor
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.Irc2RDF.main
Extra-Libraries: raptor

Executable:     irc2notetaker
Main-Is:        Fenfire/Irc2Notetaker.hs
Other-Modules:  Fenfire.Irc2Notetaker Fenfire.RDF
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.Irc2Notetaker.main
Extra-Libraries: raptor

Executable:     latex2png
Main-Is:        Fenfire/Latex2Png.hs
Other-Modules:  Fenfire.Latex2Png
GHC-Options:    -Wall
                -fno-warn-unused-imports -fno-warn-missing-signatures
                -fno-warn-orphans
                -main-is Fenfire.Latex2Png.main

